--- a/package.json
+++ b/package.json
@@ -3,52 +3,63 @@
   "version": "0.7.0",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-direct-import": "^0.3.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
-    "eslint": "^4.6.1",
+    "eslint": "^4.7.2",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.9.0",
+    "eslint-plugin-class-property": "^1.0.6",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
     "install": "^0.10.1",
     "node-sass": "^4.5.2",
-    "optimize-css-assets-webpack-plugin": "^3.1.1",
-    "postcss": "^6.0.11",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss": "^6.0.12",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "postcss-reporter": "^5.0.0",
     "postcss-url": "^7.1.2",
-    "prop-types": "^15.5.8",
     "sass-loader": "^6.0.6",
     "script-ext-html-webpack-plugin": "^1.8.5",
     "style-loader": "^0.18.2",
     "stylelint": "^8.1.1",
     "stylelint-order": "^0.6.0",
     "stylelint-webpack-plugin": "^0.9.0",
-    "uglify-js": "^3.1.0",
+    "uglify-js": "^3.1.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.7.1"
+    "webpack": "^3.6.0",
+    "webpack-dashboard": "^1.0.0-7",
+    "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "eslint-config-airbnb-base": "^12.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-transition-group": "^2.2.0"
+    "material-design-icons": "^3.0.1",
+    "material-ui": "^1.0.0-beta.12",
+    "material-ui-icons": "^1.0.0-beta.10",
+    "mdi-material-ui": "^2.0.0",
+    "prop-types": "^15.6.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-transition-group": "^2.2.0",
+    "typeface-roboto": "0.0.35"
   },
   "scripts": {
     "start": "webpack-dev-server -d --hot --config webpack.config.js --watch",
